src/test/deca/syntax/invalid/while-withoutBody.synt
while-withoutBody.deca:4: